--- a/templates/generic_test.py.j2
+++ b/templates/generic_test.py.j2
@@ -1,4 +1,5 @@
 import pytest
 
-def test_BANNER_GRABBED():
-    pytest.skip("Generic banner-based finding")
+@pytest.mark.vuln_id("GENERIC")
+def test_generic_vulnerability():
+    pytest.skip("Vulnerabilidade genérica sem teste explorável")
