--- a/templates/generic_test.py.j2
+++ b/templates/generic_test.py.j2
@@ -1,5 +1,5 @@
 import pytest
 
-@pytest.mark.vuln_id("GENERIC")
-def test_generic_vulnerability():
-    pytest.skip("Vulnerabilidade genérica sem teste explorável")
+@pytest.mark.vuln_id("GENERIC_TEST")
+def test_GENERIC():
+    pytest.skip("Teste genérico não implementado")
